# minio-spark-notebooks

./: .env.example  README.md  docker-compose.yml  pyproject.toml
data/spark/notebooks/: arima.ipynb
miniospark/: Dockerfile
miniospark/conf/: notebook  requirements.txt  spark-defaults.conf
miniospark/scripts/: entrypoint.sh
