[tool.poetry]
name = "minio-spark-notebooks"
version = "0.1.0"
description = ""
authors = ["alfredo-ben <alfredo@thanksben.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
dbt-postgres = "^1.5.1"
pandas = "^2.0.2"
jupyter = "^1.0.0"
prettytable = "^3.8.0"
pyspark = "^3.4.0"
awscliv2 = "^2.2.0"
markupsafe = "^2.1.3"
requests = "^2.31.0"
kaggle = "^1.5.13"
yfinance = "^0.2.20"
pmdarima = "^2.0.3"
matplotlib = "^3.7.1"
black = "^23.3.0"
jupyter-client = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
